# dioptase_batch_gui

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  batch_gui.py  batch_processor.py  check_dependencies.py  file_watcher.py  pyproject.toml  requirements.txt
dbg/: __init__.py  __main__.py
dioptas_batch_gui/: __init__.py  batch_processor.py  file_watcher.py  gui.py  version.py
dioptas_batch_gui/assets/: dbg.icns
tests/: test_batch_processor_metadata.py
